# UI_testing

./: .env.example  README.md  pyproject.toml
tests/: conftest.py  test_practice_form.py
ui_testing/model/controls/: checkboxes.py  datepicker.py  dropdown.py  radio.py
ui_testing/model/data/: user.py
ui_testing/model/pages/: practice_form.py
ui_testing/utils/: config.py  path_to_file.py
